Big update to install.R, includes version reqs all packs, etc.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Title: Shiny + phyloseq
 Author: Paul J. McMurdie
-AuthorUrl: https://people.stanford.edu/mcmurdie
+AuthorUrl: http://stackoverflow.com/users/935950/paul-mcmurdie
 License: GPL-3
 DisplayMode: normal
 Tags: microbiome
